.k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graph-docs
  annotations:
    cert-manager.io/issuer: "staging-cluster-origin-issuer"
    cert-manager.io/issuer-kind: "ClusterOriginIssuer"
    cert-manager.io/issuer-group: "cert-manager.k8s.cloudflare.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging.thegraph.com
      secretName: staging-thegraph-com-tls
  rules:
    - host: staging.thegraph.com
      http:
        paths:
          - backend:
              service:
                name: graph-docs
                port:
                  name: http
            path: /docs
            pathType: Prefix
